Basic login setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Logo Lab Demo</title>
   </head>
   <body>
-    <div data-js="root"></div>
+    <div data-js="root" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
